--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         * {
             box-sizing: border-box;
-            /* outline:1px solid ;*/
+            outline:1px solid ;
         }
 
         body {
