--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p>you should receive a confirmation email. </p>
                 <a href="https://parasjain7.github.io/placement-form">
                     <button class="go-home">
-                        go home
+                        go back
                     </button>
                 </a>    
             </div>
