--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="wrapper-1">
             <div class="wrapper-2">
                 <h1>Thank you !</h1>
-                <p>Thanks for filling the placement form. </p>
-                <p>you should receive a confirmation email. </p>
+                <p>Thank you for filling out the placement form.... </p>
+                <p>Your information has been recorded. Please check your email for confirmation.</p>
                 <a href="https://parasjain7.github.io/placement-form">
                     <button class="go-home">
                         go back
