--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class=content>
         <div class="wrapper-1">
             <div class="wrapper-2">
-                <h1>Thank you !</h1>
+                <h1>Thank you</h1>
                 <p>Thank you for filling out the placement form.... </p>
                 <p>Your information has been recorded. Please check your email for confirmation.</p>
                 <a href="https://parasjain7.github.io/placement-form">
